--- a/templates/layout.html
+++ b/templates/layout.html
@@ -135,7 +135,7 @@
             width: 56px;
             height: 56px;
             border-radius: 12rem;
-            background: linear-gradient(135deg,#e6eef3,#c7d2da);
+            background: linear-gradient(135deg,#ffffff,#c7d2da);
             display:flex; align-items:center; justify-content:center;
             box-shadow: inset 0 -6px 12px rgba(0,0,0,0.06);
             margin-left:6px;
@@ -224,7 +224,7 @@
 
     <footer class="footer">
         <div></div>
-        <div class="text-muted">Mr.Bigstone による IdeaLab</div>
+        <div class="text-muted">Mr.Bigstone による IdeaLabの一環で作成されました</div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
