--- a/templates/dxf_tool.html
+++ b/templates/dxf_tool.html
@@ -36,7 +36,7 @@
                 </div>
 
                 <button type="submit" class="btn btn-primary btn-lg w-100">
-                    <i class="fas fa-file-export me-2"></i> DXFファイルを生成・ダウンロード
+                    <i class="bi bi-file-earmark-arrow-down me-2"></i> DXFファイルを生成・ダウンロード
                 </button>
             </form>
         </div>
