--- a/templates/forum.html
+++ b/templates/forum.html
@@ -35,7 +35,7 @@
     <div class="col-lg-4">
         <div class="card p-3">
             <h6>匿名で記事を投稿</h6>
-            <form method="POST" action="{{ url_for('post_article') }}">
+            <form method="POST" action="{{ url_for('post_article_submit') }}">
                 <div class="mb-2">
                     <input name="title" class="form-control" placeholder="タイトル（任意）">
                 </div>
